compiler/testData/diagnostics/tests/overload/RedeclarationThroughDestructuring.diag.txt
/RedeclarationThroughDestructuring.kt:5:14: error: conflicting declarations: val b: String, val b: Int
        val (b, b) = e
             ^
/RedeclarationThroughDestructuring.kt:5:17: error: conflicting declarations: val b: String, val b: Int
        val (b, b) = e
                ^
